# LightBase-example

./: CMakeLists.txt
include/lightbase/: hook.h  lightbase.h  symbol.h
lib/win/: lightbase.lib
src/: main.c
